--- a/Emo-Packer/log4j.properties
+++ b/Emo-Packer/log4j.properties
@@ -12,4 +12,4 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %5p %c{1} - %m%n
 
 # Logger
-log4j.logger.com.emo_framework.tools.database=debug, file, stdout
+log4j.logger.com.emo_framework.tools.database=log, file, stdout
