--- a/Emo-Packer/log4j.properties
+++ b/Emo-Packer/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d %5p %c{1} - %m%n
 
 # FileAppender
 log4j.appender.file=org.apache.log4j.FileAppender
-log4j.appender.file.File=emo-packer.log
+log4j.appender.file.File=emo_packer.log
 log4j.appender.file.Append=true
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %5p %c{1} - %m%n
